[gd_scene load_steps=29 format=2]

[ext_resource path="res://GlobalTheme.tres" type="Theme" id=1]
[ext_resource path="res://Game/TooltipDisplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/GameUI.gd" type="Script" id=3]
[ext_resource path="res://UI/FontResources/Normal/NormalFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://UI/FontResources/Normal/BoldItalicsFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://UI/FontResources/Normal/ItalicsFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://UI/FontResources/Normal/BoldFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://Game/PlayerPanel.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/MapAndTimePanel.tscn" type="PackedScene" id=9]
[ext_resource path="res://Game/CharacterPanel.tscn" type="PackedScene" id=10]
[ext_resource path="res://UI/CharactersPanel.tscn" type="PackedScene" id=11]
[ext_resource path="res://UI/MainMenu/InGameMenu.tscn" type="PackedScene" id=12]
[ext_resource path="res://UI/SkillsUI/SkillsUI.tscn" type="PackedScene" id=13]
[ext_resource path="res://Game/SmartScrollContainer.gd" type="Script" id=14]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.207843, 0.133333, 0.364706, 1 )
corner_radius_top_right = 16
corner_radius_bottom_right = 16

[sub_resource type="InputEventKey" id=15]
scancode = 16777248
physical_scancode = 16777248
unicode = 16777248

[sub_resource type="ShortCut" id=16]
shortcut = SubResource( 15 )

[sub_resource type="InputEventKey" id=17]
scancode = 16777252
physical_scancode = 16777252
unicode = 16777252

[sub_resource type="ShortCut" id=18]
shortcut = SubResource( 17 )

[sub_resource type="InputEventKey" id=9]
scancode = 88
physical_scancode = 88
unicode = 88

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[sub_resource type="InputEventKey" id=7]
scancode = 67
physical_scancode = 67
unicode = 67

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="InputEventKey" id=11]
scancode = 90
physical_scancode = 90
unicode = 90

[sub_resource type="ShortCut" id=12]
shortcut = SubResource( 11 )

[sub_resource type="InputEventKey" id=13]
scancode = 86
physical_scancode = 86
unicode = 86

[sub_resource type="ShortCut" id=14]
shortcut = SubResource( 13 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.207843, 0.133333, 0.364706, 1 )
corner_radius_top_left = 16
corner_radius_bottom_left = 16

[node name="GameUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.82843
margin_bottom = -2.82843
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel2" type="Panel" parent="HBoxContainer"]
margin_right = 260.0
margin_bottom = 720.0
rect_min_size = Vector2( 260, 0 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel2/MarginContainer"]
margin_right = 236.0
margin_bottom = 696.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterPanel" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 236.0
margin_bottom = 136.0

[node name="CharactersPanel" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer" instance=ExtResource( 11 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 140.0
margin_right = 236.0
margin_bottom = 196.0

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
margin_top = 200.0
margin_right = 236.0
margin_bottom = 342.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MapAndTimePanel" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 346.0
margin_right = 236.0
margin_bottom = 606.0

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
margin_top = 610.0
margin_right = 236.0
margin_bottom = 636.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 116.0
margin_bottom = 26.0
hint_tooltip = "Quick save"
size_flags_horizontal = 3
shortcut = SubResource( 16 )
text = "Q.save"

[node name="LoadButton" type="Button" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 120.0
margin_right = 236.0
margin_bottom = 26.0
hint_tooltip = "Quick load"
size_flags_horizontal = 3
shortcut = SubResource( 18 )
text = "Q.load"

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
margin_top = 640.0
margin_right = 236.0
margin_bottom = 666.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkillsButton" type="Button" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_right = 116.0
margin_bottom = 26.0
hint_tooltip = "Spend the stat points and look at your skills"
size_flags_horizontal = 3
shortcut = SubResource( 10 )
text = "Skills"

[node name="MenuButton" type="Button" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 120.0
margin_right = 236.0
margin_bottom = 26.0
hint_tooltip = "Open the menu"
size_flags_horizontal = 3
shortcut = SubResource( 8 )
text = "Menu"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
margin_top = 670.0
margin_right = 236.0
margin_bottom = 696.0

[node name="PrevPageButton" type="Button" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 116.0
margin_bottom = 26.0
hint_tooltip = "Flip to the previous page of options"
size_flags_horizontal = 3
shortcut = SubResource( 12 )
text = "<- Page"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextPageButton" type="Button" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 120.0
margin_right = 236.0
margin_bottom = 26.0
hint_tooltip = "Flip to the next page of options"
size_flags_horizontal = 3
shortcut = SubResource( 14 )
text = "Page ->"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="HBoxContainer"]
margin_left = 264.0
margin_right = 269.0
margin_bottom = 720.0
rect_min_size = Vector2( 5, 0 )

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 273.0
margin_right = 983.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Control" parent="HBoxContainer/VBoxContainer2"]
margin_right = 710.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 34.0
margin_right = 710.0
margin_bottom = 616.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 14 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/ScrollContainer"]
margin_right = 710.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer2/ScrollContainer/VBoxContainer"]
margin_right = 710.0
margin_bottom = 25.0
focus_mode = 2
size_flags_horizontal = 3
custom_fonts/bold_italics_font = ExtResource( 5 )
custom_fonts/italics_font = ExtResource( 6 )
custom_fonts/bold_font = ExtResource( 7 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
fit_content_height = true
selection_enabled = true

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 620.0
margin_right = 710.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 100 )
columns = 5

[node name="InGameMenu" parent="HBoxContainer" instance=ExtResource( 12 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 652.0
margin_right = 1027.0
margin_bottom = 720.0

[node name="SkillsUI" parent="HBoxContainer" instance=ExtResource( 13 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 984.0
margin_right = 984.0
margin_bottom = 720.0

[node name="HSplitContainer2" type="HSplitContainer" parent="HBoxContainer"]
margin_left = 987.0
margin_right = 992.0
margin_bottom = 720.0
rect_min_size = Vector2( 5, 0 )

[node name="Panel" type="Panel" parent="HBoxContainer"]
margin_left = 996.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 240, 0 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
custom_styles/panel = SubResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerPanel" parent="HBoxContainer/Panel/MarginContainer" instance=ExtResource( 8 )]
margin_right = 260.0
margin_bottom = 696.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TooltipDisplay" parent="CanvasLayer" instance=ExtResource( 2 )]
margin_left = 30.2906
margin_top = -128.289
margin_right = 280.291
margin_bottom = -96.289

[connection signal="pressed" from="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer2/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer2/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer3/SkillsButton" to="." method="_on_SkillsButton_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer3/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/PrevPageButton" to="." method="_on_PrevPageButton_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/NextPageButton" to="." method="_on_NextPageButton_pressed"]
[connection signal="onResumeButtonPressed" from="HBoxContainer/InGameMenu" to="." method="showGameScreen"]
[connection signal="onClosePressed" from="HBoxContainer/SkillsUI" to="." method="showGameScreen"]
